# mcp-homeassistant

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_homeassistant/: __init__.py  __main__.py  _core.py
tests/: conftest.py  test_core.py
