[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-homeassistant"
version = "0.1.0"
description = "MCP server exposing Home Assistant REST API functionality"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "fastmcp>=2.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "types-requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
    "types-requests>=2.31.0",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-homeassistant[dev,test,lint]"]

[project.scripts]
mcp-homeassistant = "mcp_homeassistant.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-homeassistant"
Repository = "https://github.com/daedalus/mcp-homeassistant"
Issues = "https://github.com/daedalus/mcp-homeassistant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_homeassistant"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_homeassistant"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["ARG", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp_homeassistant._core"
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
